name:                twain-bulletin-app
version:             0.1.0.0
synopsis:            A simple bulletin board web app using twain
description:         Please see readme.md
homepage:            https://github.com/soupi/learn-twain-bulletin-app
license-file:        LICENSE
author:              Gil Mizrahi
maintainer:          gilmi@posteo.net
copyright:           2022 Gil Mizrahi
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  readme.md

library
  hs-source-dirs:      src
  exposed-modules:     Bulletin
                       DB
                       Post
                       STM

  ghc-options:         -Wall -fno-warn-type-defaults
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text >= 2
                     , containers
                     , time
                     , stm
                     , twain >= 2.1.0.0
                     , warp
                     , wai-extra
                     , lucid
                     , sqlite-easy

executable bulletin-app
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  -- ghc-options: -Wall -static -optl-static -optl-pthread -fPIC -O -threaded -rtsopts -with-rtsopts=-N
  ghc-options: -Wall -O -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , twain-bulletin-app
